<resources>
    <string name="wns_name">威尼斯</string>
    <string name="loading_message">加载中...</string>
    <string name="html5_loading">资源加载中...</string>
    <string name="error_message">哎呀！发生了一些错误</string>
    <string name="empty_button">点击重试</string>
    <string name="loading_button">取消</string>
    <string name="error_button">重试</string>
    <string name="home">主   页</string>
    <string name="customer">客服中心</string>
    <string name="unlogin">未登录</string>
    <string name="exit">退出登录</string>
    <string name="qiandao">签到</string>
    <string name="fundsmanagement">资金管理</string>
    <string name="lineconversion">额度转换</string>
    <string name="messagepage">信息中心</string>
    <string name="Loginout">登出</string>
    <string name="loginin">登   录</string>
    <string name="signin">注    册</string>
    <string name="hotgame">热门游戏</string>
    <string name="tijiao">提  交</string>
    <string name="Favourableactivity">优惠活动</string>
    <string name="addRMB">存款</string>
    <string name="fanhui">返  回</string>
    <string name="makeRMB">汇款</string>
    <string name="getRMB">提款</string>
    <string name="otherRMB">其他</string>
    <string name="playcolor">体育</string>
    <string name="person_account">账户信息</string>
    <string name="account_bind_toptext">账户绑定</string>
    <string name="message_c">(</string>
    <string name="message_d">)</string>
    <string name="button_pc">点击进入PC版</string>
    <string name="judge_money">请选择转出钱包</string>
    <string name="account_in">请选择转入钱包</string>
    <string name="account_Data">个人资料</string>
    <string name="now_startgame">立即开始</string>
    <string name="start_Data">开始日期</string>
    <string name="funds_money_t">RMB</string>
    <string name="updata_password">更改密码</string>
    <string name="in_money_rmb">请选择转账金额</string>
    <string name="get_money_password">取款密码</string>
    <string name="account_limit">账户额度</string>
    <string name="home_more">更多 >></string>
    <string name="all_money">全部</string>
    <string name="one_hundred">100</string>
    <string name="two_hundred">300</string>
    <string name="five_hundred">500</string>
    <string name="ten_hundred">1000</string>
    <string name="fifty_hundred">5000</string>
    <string name="one_hundred_hundred">10000</string>
    <string name="end_month">结束日期</string>
    <string name="finance_data">财务信息</string>
    <string name="fund_context">款项内容</string>

    <string name="zz_all">全部</string>
    <string name="add_examine">存款查询</string>
    <string name="timecolor">时时彩</string>
    <string name="colornote">彩票</string>
    <string name="sexcolor">六合彩</string>
    <string name="myaccount">我的钱包 ：</string>
    <string name="login_edit_username">请输入账号</string>
    <string name="login_edit_passwork">请输入密码</string>
    <string name="login_edit_rememberpasswork">   记住密码</string>
    <string name="login_edit_signin">马上注册</string>
    <string name="login_edit_nopasswork">忘记密码</string>
    <string name="main_top_cansignin">欢迎注册使用</string>
    <string name="main_top_myaccount">我的账户</string>
    <string name="main_top_gamelist">游戏列表</string>
    <string name="my_message">我的消息</string>
    <string name="sign_edit_phone">手机号码</string>
    <string name="sign_edit_name">真实姓名</string>
    <string name="sign_edit_verification_code">验证码</string>
    <string name="sign_edit_qkpasswork">取款密码</string>
    <string name="sign_edit_twopasswork">确认密码</string>
    <string name="sign_edit_passwork">密码</string>
    <string name="signin_edit_username">账号</string>
    <string name="signin_text_username">*输入字母开头4-12位字母数字</string>
    <string name="signin_text_password">*使用6-20位英文、数字及下划线组合</string>
    <string name="signin_text_code">*请输入验证码</string>
    <string name="signin_text_qkpassword">*使用6位数字</string>
    <string name="signin_text_name">*名字必须与您用于提款的银行户口所用的名字相同</string>
    <string name="signin_text_phone">*请填写真实的手机号码</string>
    <string name="signin_button_hava">已有账号马上登录</string>
    <string name="hands_user">会员账号：</string>
    <string name="hands_user_mame">收款人姓名：</string>
    <string name="person_name">请输入真实姓名</string>
    <string name="hands_account">收款银行：</string>
    <string name="hands_ATM_account">银行账号：</string>
    <string name="Current_limit">目前额度：</string>
    <string name="account_textview_code">验证码：</string>
    <string name="hands_ATM_site">开户地址：</string>
    <string name="save_money_min">最少充值：</string>
    <string name="setting_wpassword">设置取款密码：</string>
    <string name="hands_ATM_money">取款金额：</string>
    <string name="save_money">存款金额：</string>
    <string name="hands_ATM_password">取款密码：</string>
    <string name="ATM_prompt_0">友情提示</string>
    <string name="ATM_prompt_1">\t1.银行卡账户持有人姓名必须与注册时输入的姓名一致，否则无法申请退款。</string>
    <string name="ATM_prompt_2">\t2.每位客户只可以使用一张银行卡进行提款，如需要更换银行卡请与客服人员联系；否则提款将被拒绝。</string>
    <string name="ATM_prompt_3">\t3.为保障客户的资金安全，万·濠·会·澳·门·博·彩·协·会|联合打造有可能需要用户提供电话单，银行对账单或其它资料验证，以确保客户资金不会被冒领。</string>
    <string name="funds_search_information">查询信息</string>
    <string name="mow_save_money">马上充值</string>
    <string name="message_text">条未读信息</string>
    <string name="select_bank">选择银行</string>
    <string name="personalaccount_time">注册时间：</string>
    <string name="personalaccount_userloginintime">上次登录时间：</string>
    <string name="personalaccount_usermoney">钱包余额：</string>
    <string name="personalaccount_usermoneycount">提款需投注量：</string>
    <string name="personalaccount_payeeusername">收款人姓名：</string>
    <string name="personalaccount_payeebank">收款银行：</string>
    <string name="personalaccount_bankaccount">银行账号：</string>
    <string name="personalaccount_bankaddress">开户行地址：</string>
    <string name="personalaccount_oldpassword">原登录密码</string>
    <string name="personalaccount_newpassword">新登录密码</string>
    <string name="personalaccount_mnewpassword">确认新密码</string>
    <string name="personalaccount_getmoneyoldpassword">原取款密码</string>
    <string name="personalaccount_getmoneynewpassword">新取款密码</string>
    <string name="prepersonalaccount_getmoneynewpassword">确认取款密码</string>
    <string name="line_money_t">转账金额最低为：10元</string>
    <string name="funds_cath_deal_item_Remarks">备注说明：</string>
    <string name="account_bind_bank">请选择银行</string>
    <string name="account_bind_bank_ts">\t*例如：工商银行</string>
    <string name="account_bind_bankcount">请输入银行卡号</string>
    <string name="account_bind_bankcount_ts">\t*请输入您的银行账号</string>
    <string name="account_bind_banksity">请输入省份城市</string>
    <string name="account_bind_wpassword_t">请设置取款密码</string>
    <string name="account_bind_wpassword">\t*请输入六位数字取款密码</string>
    <string name="account_bind_bankcity_ts">\t*请输入省份城市,例如：辽宁省沈阳市</string>
    <string name="account_bind_bankcode">验证码</string>
    <string name="account_bind_bankcode_ts">\t*请输入验证码</string>

    <string name="app_name">测试</string>
    <integer-array name="material_colors">
        <item>@color/material_red</item>
        <item>@color/material_green</item>
        <item>@color/material_blue</item>
        <item>@color/material_yellow</item>
    </integer-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
