<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/main_fanhui_top"></include>

    <com.zhy.autolayout.AutoFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10px"
                android:background="@drawable/funds_deal_shape"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="75px"
                    android:layout_margin="3px"
                    android:background="@drawable/lineconversion_linear_text"
                    android:drawableLeft="@drawable/icon1"
                    android:drawablePadding="15px"
                    android:gravity="center_vertical"
                    android:padding="8px"
                    android:text="@string/account_bind_toptext"
                    android:textColor="@color/write"
                    android:textSize="30px" />

                <LinearLayout
                    style="@style/funds_ATM_Money_Linear"
                    android:layout_marginTop="15px">

                    <TextView

                        style="@style/funds_ATM_Money"
                        android:text="@string/hands_user" />

                    <TextView
                        android:id="@+id/account_user"
                        style="@style/funds_ATM_Money_textid" />

                </LinearLayout>

                <LinearLayout style="@style/funds_ATM_Money_Linear">

                    <TextView
                        style="@style/funds_ATM_Money"
                        android:text="@string/hands_user_mame" />

                    <TextView
                        android:id="@+id/account_user_mame"
                        style="@style/funds_ATM_Money_textid" />

                </LinearLayout>

                <LinearLayout style="@style/funds_ATM_Money_Linear">

                    <TextView
                        style="@style/funds_ATM_Money"
                        android:text="@string/hands_account" />

                    <TextView
                        android:id="@+id/account_account_bank"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="14px"
                        android:layout_marginTop="14px"
                        android:background="@drawable/funds_deal_shape_text"
                        android:gravity="center_vertical"
                        android:paddingLeft="25px"
                        android:text="@string/account_bind_bank"
                        android:textColor="@color/button_green"
                        android:textSize="25px" />

                </LinearLayout>

                <TextView
                    style="@style/account_bind_TS_text"
                    android:text="@string/account_bind_bank_ts" />

                <LinearLayout style="@style/funds_ATM_Money_Linear">

                    <TextView
                        style="@style/funds_ATM_Money"
                        android:text="@string/hands_ATM_account" />

                    <EditText
                        android:id="@+id/account_account_number"
                        style="@style/account_bind_style"
                        android:hint="@string/account_bind_bankcount"
                        android:inputType="number" />
                </LinearLayout>

                <TextView
                    style="@style/account_bind_TS_text"
                    android:text="@string/account_bind_bankcount_ts" />

                <LinearLayout style="@style/funds_ATM_Money_Linear">

                    <TextView
                        style="@style/funds_ATM_Money"
                        android:text="@string/hands_ATM_site" />

                    <EditText
                        android:id="@+id/account_bank_address"
                        style="@style/account_bind_style"
                        android:hint="@string/account_bind_banksity" />

                </LinearLayout>

                <TextView
                    style="@style/account_bind_TS_text"
                    android:text="@string/account_bind_bankcity_ts" />

                <LinearLayout style="@style/funds_ATM_Money_Linear">

                    <TextView
                        style="@style/funds_ATM_Money"
                        android:text="@string/setting_wpassword" />

                    <EditText
                        android:id="@+id/account_bank_wpassword"
                        style="@style/account_bind_style"
                        android:hint="@string/account_bind_wpassword_t"
                        android:inputType="numberPassword"
                        android:maxLength="6" />

                </LinearLayout>

                <TextView
                    style="@style/account_bind_TS_text"
                    android:text="@string/account_bind_wpassword" />

                <Button
                    android:id="@+id/account_button"
                    android:layout_width="match_parent"
                    android:layout_height="95px"
                    android:layout_marginLeft="30px"
                    android:layout_marginRight="30px"
                    android:layout_marginTop="30px"
                    android:background="@drawable/funds_selector_button"
                    android:gravity="center"
                    android:text="@string/tijiao"
                    android:textColor="@color/write"
                    android:textSize="30px" />

                <include layout="@layout/hint_text"></include>

            </LinearLayout>

        </ScrollView>

        <com.wishland.www.view.customgridview.EmptyLayout
            android:id="@+id/empty_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></com.wishland.www.view.customgridview.EmptyLayout>

    </com.zhy.autolayout.AutoFrameLayout>

</com.zhy.autolayout.AutoLinearLayout>