<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_all_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="85px">
    <!--android:background="@drawable/fund_submenu_bg">-->


    <!--logo万濠会-->
    <ImageView
        android:id="@+id/top_imageview"
        android:layout_width="200px"
        android:layout_height="60px"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15px"
        android:background="@mipmap/title_logo"
        android:contentDescription="" />

    <!--登出-->
    <TextView
        android:id="@+id/signout"
        style="@style/top_login"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15px"
        android:padding="8px"
        android:text="@string/Loginout"
        android:visibility="gone" />
    <!--注册-->
    <TextView
        android:id="@+id/signin"
        style="@style/top_login"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15px"
        android:padding="8px"
        android:text="@string/signin"
        android:visibility="gone" />

    <!--设置图标-->
    <ImageView
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="25px"
        android:layout_toLeftOf="@+id/signout"
        android:background="@drawable/setting"
        android:contentDescription=""
        android:padding="22px"
        android:visibility="gone" />
    <!--登录-->
    <TextView
        android:id="@+id/loginin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginRight="25px"
        android:layout_toLeftOf="@+id/signin"
        android:contentDescription=""
        android:gravity="center_vertical"
        android:padding="5px"
        android:text="@string/loginin"
        android:textColor="@color/write"
        android:textSize="27px"
        android:visibility="gone" />


    <!--login in 用戶賬戶-->
    <TextView
        android:id="@+id/login_username"
        style="@style/top_login"
        android:layout_marginRight="25px"
        android:layout_toLeftOf="@+id/setting_button"
        android:padding="8px"
        android:visibility="gone" />

</com.zhy.autolayout.AutoRelativeLayout>